--- a/index.html
+++ b/index.html
@@ -269,14 +269,14 @@
 									<span class="text-sm">Files</span>
 								</button>
 							</div>
-							<div class="flex flex-col space-y-2">
+							<!-- <div class="flex flex-col space-y-2">
 								<button @click="changeContent('two-factor')"
 									class="flex items-center p-2 rounded-lg transition-all duration-200 hover:bg-gray-100"
 									:class="{ 'bg-blue-500 text-white hover:bg-blue-600': currentContent === 'two-factor' }">
 									<i class="fa-solid fa-file-import mr-3 text-lg"></i>
-									<span class="text-sm">TworFactor</span>
+									<span class="text-sm">Two Factor</span>
 								</button>
-							</div>
+							</div> -->
 						</div>
 					</li>
 					<li x-data="{ open: false }">
