--- a/Email Template purchaseorder/purchaseorders.html
+++ b/Email Template purchaseorder/purchaseorders.html
@@ -240,7 +240,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="http://prosalesinc.com/images/logo.png" alt="Pro Sales Inc. Logo" class="logo">
+            <img src="/images/logo.png" alt="Pro Sales Inc. Logo" class="logo">
         </div>
         <div class="content">
             <h1>Purchase Order Confirmed</h1>
@@ -327,7 +327,7 @@
             </div>
         </div>
         <div class="footer">
-            <img src="http://prosalesinc.com/images/logo.png" alt="Pro Sales Inc. Logo" class="footer-logo">
+            <img src="/images/logo.png" alt="Pro Sales Inc. Logo" class="footer-logo">
             <div class="footer-address">
                 <p>9101 Yellow Road, Uptown Liverpool L3 4EF, United Kingdom</p>
             </div>
