--- a/qrcodepagedesign.html
+++ b/qrcodepagedesign.html
@@ -256,9 +256,9 @@
             </div>
     
             <div class="text-center flex justify-center gap-5">
-                <button class="bg-indigo-500 text-white text-xl font-bold py-2 px-5 rounded-xl hover:bg-indigo-600 transition-all duration-300 transform hover:scale-105">
+                <a href="poster.html" class="bg-indigo-500 text-white text-xl font-bold py-2 px-5 rounded-xl hover:bg-indigo-600 transition-all duration-300 transform hover:scale-105">
                     printable Flyer #1
-                </button>
+                </a>
                 <button class="bg-indigo-500 text-white text-xl font-bold py-2 px-5 rounded-xl hover:bg-indigo-600 transition-all duration-300 transform hover:scale-105">
                     printable Flyer #2
                 </button>
