--- a/Email Template purchaseorder/privateopenhouse/emailtemplates/sharedocs.html
+++ b/Email Template purchaseorder/privateopenhouse/emailtemplates/sharedocs.html
@@ -193,7 +193,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="http://localhost:8000/images/logo.png" alt="Company Logo" class="logo">
+            <img src="https://privateopenhouse.com/images/logo.png" alt="Company Logo" class="logo">
         </div>
         <div class="content">
             <div class="property-card">
