--- a/Email Template purchaseorder/purchaseorders.html
+++ b/Email Template purchaseorder/purchaseorders.html
@@ -140,10 +140,6 @@
             margin-right: 20px;
         }
 
-        .icon-wrapper i {
-            font-size: 24px;
-            color: white;
-        }
 
         .contact-info {
             flex-grow: 1;
@@ -308,7 +304,7 @@
             <div class="contact-boxes">
                 <div class="contact-box">
                     <div class="icon-wrapper">
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-envelope" style="color: white;"></i>
                     </div>
                     <div class="contact-info">
                         <h3>EMAIL US</h3>
@@ -317,7 +313,7 @@
                 </div>
                 <div class="contact-box">
                     <div class="icon-wrapper">
-                        <i class="fas fa-phone"></i>
+                        <i class="fas fa-phone" style="color: white;"></i>
                     </div>
                     <div class="contact-info">
                         <h3>PHONE US</h3>
