--- a/Email Template purchaseorder/opentour.html
+++ b/Email Template purchaseorder/opentour.html
@@ -220,7 +220,7 @@
 </head>
 <body>
     <!-- Open House Invitation Template -->
-    <!-- Buyer's Confirmation Email -->
+    <!--  Confirmation Email -->
     <div class="email-wrapper">
         <div class="email-header ">
             <img src="https://privateopenhouse.com/images/logo.png" alt="PrivateOpenHouseInc" class="logo">
@@ -268,7 +268,7 @@
         </div>
     </div>
 
-    <!-- Buyer's Agent Confirmation Email -->
+    <!-- Buyer's Confirmation Email -->
     <div class="email-wrapper">
         <div class="email-header ">
             <img src="https://privateopenhouse.com/images/logo.png" alt="PrivateOpenHouseInc" class="logo">
