--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="bg-white shadow-xl rounded-lg overflow-x-auto" x-data="{ deleting: false }"">
+    <div class="bg-white shadow-xl rounded-lg overflow-x-auto" x-data="{ deleting: false }">
         <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
             <thead class="bg-gray-50 dark:bg-gray-800">
                 <tr>
